fix: set z-index for .ycn-aside-header__content

--- a/src/components/AsideHeader/AsideHeader.scss
+++ b/src/components/AsideHeader/AsideHeader.scss
@@ -190,6 +190,7 @@ $block: '.#{variables.$ns}aside-header';
 
     &__content {
         width: calc(100% - var(--aside-header-size));
+        z-index: 95;
     }
 
     &__collapse-button {
